--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -166,6 +166,7 @@ a#go2content[href="javascript:scrollToNum()"] {
         display: grid;
         grid-template-columns: 0fr;
         grid-template-rows: auto;
+        grid-auto-flow: column;
         overflow-x: hidden;
 
         transition: grid-template-columns 2.5s ease;
