--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -11,20 +11,22 @@ import '../styles/header.scss'
     <label for="closeNav" class="nav-hbg">
       <img class="icon" alt="Open Sidebar Navigation" src="/assets/icons/hamburger-large.svg" />
     </label>
-    <div>
-      <div class="nav-info">
-        <h3>Navigation</h3>
-        <label for="closeNav" class="mob-nav-clse">
-          <img class="icon" alt="Close Sidebar Navigation" src="/assets/icons/X.svg" />
-        </label>
+    <div class="nav-btns">
+      <div class="nav-btns__inner">
+        <div class="nav-info">
+          <h3>Navigation</h3>
+          <label for="closeNav" class="mob-nav-clse">
+            <img class="icon" alt="Close Sidebar Navigation" src="/assets/icons/X.svg" />
+          </label>
+        </div>
+        <a href="/" class="btn">Home</a>
+        <a href="/mission" class="btn">Mission</a>
+        <a href="/projects" class="btn">Projects</a>
+        <a href="/members" class="btn">Members</a>
+        <a href="/work" class="btn">Member Work</a>
+        <a href="https://go.graphics-for-good.com/Sign-Up" class="btn primary">Sign Up</a>
+  <!--  <a href="/portal" class="btn">Portal</a>-->
       </div>
-      <a href="/" class="btn">Home</a>
-      <a href="/mission" class="btn">Mission</a>
-      <a href="/projects" class="btn">Projects</a>
-      <a href="/members" class="btn">Members</a>
-      <a href="/work" class="btn">Member Work</a>
-      <a href="https://go.graphics-for-good.com/Sign-Up" class="btn primary">Sign Up</a>
-<!--  <a href="/portal" class="btn">Portal</a>-->
     </div>
   </nav>
   <div class="social">
