--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -78,6 +78,7 @@ a#go2content[href="javascript:scrollToNum()"] {
     }
 
     & > .nav-btns {
+      flex: 1;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
