--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -157,7 +157,7 @@ a#go2content[href="javascript:scrollToNum()"] {
         inset: 0;
         height: 100dvh;
 
-        background-color: #0001;
+        --bg-color: #0001;
 
         &__inner {
           box-sizing: border-box;
@@ -169,10 +169,12 @@ a#go2content[href="javascript:scrollToNum()"] {
           padding: var(--padding) var(--padding);
   
           display: grid;
-          align-content: start;
           grid-template-columns: 0fr;
           grid-template-rows: auto;
           grid-auto-flow: column;
+
+          align-content: start;
+          gap: var(--padding);
           overflow-x: hidden;
   
           transition: grid-template-columns 2.5s ease;
