--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -158,7 +158,7 @@ a#go2content[href="javascript:scrollToNum()"] {
         inset: 0;
         height: 100dvh;
 
-        --bg-color: #0001;
+        --bg-color: #0005;
 
         & .nav-btns__inner {
           box-sizing: border-box;
@@ -174,6 +174,7 @@ a#go2content[href="javascript:scrollToNum()"] {
           grid-template-rows: auto;
           grid-auto-flow: column;
 
+          justify-content: flex-start;
           align-content: start;
           gap: var(--padding);
           overflow-x: hidden;
