--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -158,6 +158,8 @@ a#go2content[href="javascript:scrollToNum()"] {
         inset: 0;
         height: 100dvh;
 
+        display: none;
+
         --bg-color: rgba(0, 0, 0, 0.25);
 
         & .nav-btns__inner {
@@ -215,8 +217,8 @@ a#go2content[href="javascript:scrollToNum()"] {
         }
       }
     }
-    #closeNav:checked + .nav-items {
-      grid-template-columns: 1fr;
+    #closeNav:checked + .nav-btns {
+      display: block;
     }
   }
 }
