--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -7,7 +7,7 @@ import '../styles/header.scss'
     <img class="logo" src="/assets/Logo-Blank.svg" alt="Graphics for Good Logo" title="Our Logo">
   </div>
   <nav class="nav">
-    <input type="checkbox" id="closeNav" style="--display: auto;" />
+    <input type="checkbox" id="closeNav" style="--display: none;" />
     <label for="closeNav" class="nav-hbg">
       <img class="icon" alt="Open Sidebar Navigation" src="/assets/icons/hamburger-large.svg" />
     </label>
