--- a/src/pages/members/amelia.astro
+++ b/src/pages/members/amelia.astro
@@ -22,8 +22,8 @@ var userData = {
     state: '',
   }, 
   bio: {
-    w1: 'an'
-    role: 'active designer'
+    w1: 'an', 
+    role: 'active designer', 
   }, 
   socials: [],
   portfolio: [],
