--- a/src/pages/members/mia.astro
+++ b/src/pages/members/mia.astro
@@ -23,6 +23,8 @@ var userData = {
     state: '',
   }, 
   bio: {
+    w1: 'an', 
+    role: 'active member'
   }, 
   socials: [],
   portfolio: [],
