--- a/src/pages/members/isabelle.astro
+++ b/src/pages/members/isabelle.astro
@@ -4,7 +4,7 @@ import updateUserData from './updateUserData.js'
 
 var userData = {
   username: 'isabelle', 
-  name: 'Isabelle Anderson <span id="tag">(Website Designer)</span>',
+  name: 'Isabelle Anderson <span id="tag">(Website Assistant)</span>',
   pronunciation: false, 
   email: {
     g4g: false,
