--- a/src/pages/members/shikha.astro
+++ b/src/pages/members/shikha.astro
@@ -4,7 +4,7 @@ import updateUserData from './updateUserData.js'
 
 var userData = {
   username: 'shikha', 
-  name: 'Shikha Iyer <span id="tag">(Club President)</span>',
+  name: 'Shikha Iyer <span id="tag">(Founder)</span>',
   pronunciation: false, //'Uh-da-r-sh',
   email: {
     g4g: true,
