--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -1,9 +1,9 @@
 ---
 const members = [
-  'Shikha Iyer <span id="tag">(Club President)</span>', 
-  'Sayuri Rodrigo <span id="tag">(Club Vice-President)</span>', 
-  'Adarsh Kumar <span id="tag">(Website Manager/Designer)</span>', 
-  'Isabelle Anderson <span id="tag">(Website Designer)</span>', 
+  'Shikha Iyer <span id="tag">(Founder)</span>', 
+  'Sayuri Rodrigo <span id="tag">(Vice-President)</span>', 
+  'Adarsh Kumar <span id="tag">(Website Manager)</span>', 
+  'Isabelle Anderson <span id="tag">(Website Assistant)</span>', 
   'Amelia Chang', 
   'Luce Dittrich', 
   // 'Rien (Rick) Gupta', 
