--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -4,7 +4,7 @@ import updateUserData from './updateUserData.js'
 
 var userData = {
   username: 'adarsh', 
-  name: 'Adarsh Kumar <span id="tag">(Website Manager/Designer)</span>',
+  name: 'Adarsh Kumar <span id="tag">(Website Manager)</span>',
   pronunciation: false, //'Uh-da-r-sh',
   email: {
     g4g: true,
