update shikha.astro / updateUserData.js

--- a/src/pages/members/shikha.astro
+++ b/src/pages/members/shikha.astro
@@ -32,6 +32,7 @@ var userData = {
   bio: {
     w1: 'the',
     w2: 'for',
+    end: "When she's not working on schoolwork or club prep, she's drawing, reading, or listening to Taylor Swift music on blast."
   }, 
   socials: [],
   portfolio: [
