--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -4,7 +4,8 @@ import updateUserData from './updateUserData.js'
 
 var userData = {
   username: 'adarsh', 
-  name: 'Adarsh Kumar <span id="tag">(Website Manager)</span>',
+  name: 'Adarsh Kumar',
+  role: 'Website Manager', 
   pronunciation: false, //'Uh-da-r-sh',
   email: {
     g4g: true,
