--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -5,7 +5,9 @@ import updateUserData from './updateUserData.js'
 var userData = {
   username: 'adarsh', 
   name: 'Adarsh Kumar',
-  role: 'Website Manager', 
+  role {
+    name: 'Website Manager', 
+  }, 
   pronunciation: false, //'Uh-da-r-sh',
   email: {
     g4g: true,
