--- a/src/pages/members/amelia.astro
+++ b/src/pages/members/amelia.astro
@@ -5,7 +5,9 @@ import updateUserData from './updateUserData.js'
 var userData = {
   username: 'amelia', 
   name: 'Amelia Chang',
-  role: 'active designer', 
+  role: {
+    name: 'active designer', 
+  }, 
   pronunciation: false, //'Uh-da-r-sh',
   email: {
     g4g: false,
