--- a/src/pages/members/bridget.astro
+++ b/src/pages/members/bridget.astro
@@ -5,6 +5,9 @@ import updateUserData from './updateUserData.js'
 var userData = {
   username: 'bridget', 
   name: 'Bridget Won',
+  role {
+    name: 'avid designer and member', 
+  }, 
   pronunciation: false, //'Uh-da-r-sh',
   email: {
     g4g: false,
