--- a/src/pages/members/mia.astro
+++ b/src/pages/members/mia.astro
@@ -5,7 +5,9 @@ import updateUserData from './updateUserData.js'
 var userData = {
   username: 'mia', 
   name: 'Mia Tucker',
-  role: 'active member'
+  role {
+    name: 'active member', 
+  }, 
   pronunciation: false, //'Uh-da-r-sh',
   email: {
     g4g: false,
