--- a/src/pages/members/sayuri.astro
+++ b/src/pages/members/sayuri.astro
@@ -4,7 +4,10 @@ import updateUserData from './updateUserData.js'
 
 var userData = {
   username: 'sayuri', 
-  name: 'Sayuri Rodrigo <span id="tag">(Vice-President)</span>',
+  name: 'Sayuri Rodrigo',
+  role: {
+    name: 'Vice-President'
+  }, 
   pronunciation: false, //'Sai-oo-ri',
   email: {
     g4g: false,
