--- a/src/pages/members/shikha.astro
+++ b/src/pages/members/shikha.astro
@@ -5,7 +5,9 @@ import updateUserData from './updateUserData.js'
 var userData = {
   username: 'shikha', 
   name: 'Shikha Iyer',
-  role: 'President and Founder'
+  role {
+    name: 'President and Founder'
+  }, 
   pronunciation: false, //'Uh-da-r-sh',
   email: {
     g4g: true,
