--- a/src/pages/members/bridget.astro
+++ b/src/pages/members/bridget.astro
@@ -5,7 +5,7 @@ import updateUserData from './updateUserData.js'
 var userData = {
   username: 'bridget', 
   name: 'Bridget Won',
-  role {
+  role: {
     name: 'avid designer and member', 
   }, 
   pronunciation: false, //'Uh-da-r-sh',
