--- a/src/pages/members/isabelle.astro
+++ b/src/pages/members/isabelle.astro
@@ -5,7 +5,7 @@ import updateUserData from './updateUserData.js'
 var userData = {
   username: 'isabelle', 
   name: 'Isabelle Anderson',
-  role {
+  role: {
     name: 'Website Assistant', 
   }, 
   pronunciation: false, 
