--- a/src/pages/members/shikha.astro
+++ b/src/pages/members/shikha.astro
@@ -5,7 +5,7 @@ import updateUserData from './updateUserData.js'
 var userData = {
   username: 'shikha', 
   name: 'Shikha Iyer',
-  role {
+  role: {
     name: 'President and Founder'
   }, 
   pronunciation: false, //'Uh-da-r-sh',
