--- a/src/pages/members/mia.astro
+++ b/src/pages/members/mia.astro
@@ -5,7 +5,7 @@ import updateUserData from './updateUserData.js'
 var userData = {
   username: 'mia', 
   name: 'Mia Tucker',
-  role {
+  role: {
     name: 'active member', 
   }, 
   pronunciation: false, //'Uh-da-r-sh',
