--- a/src/pages/members/mia.astro
+++ b/src/pages/members/mia.astro
@@ -27,6 +27,7 @@ var userData = {
   }, 
   bio: {
     w1: 'an', 
+    end: 'She likes art and fashion. She also runs a fashion design club at her school.', 
   }, 
   socials: [],
   portfolio: [],
