--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -1,6 +1,6 @@
 ---
 const members = [
-  'Shikha Iyer <span id="tag">(Founder)</span>', 
+  'Shikha Iyer <span id="tag">(President and Founder)</span>', 
   'Sayuri Rodrigo <span id="tag">(Vice-President)</span>', 
   'Adarsh Kumar <span id="tag">(Website Manager)</span>', 
   'Isabelle Anderson <span id="tag">(Website Assistant)</span>', 
