--- a/src/pages/members/isabelle.astro
+++ b/src/pages/members/isabelle.astro
@@ -26,8 +26,8 @@ var userData = {
     state: '',
   }, 
   bio: {
-    w1: false, 
     w2: 'for',
+    end: 'She likes to crochet in her free time and browse online shopping sites.', 
   }, 
   socials: [],
   portfolio: [
