--- a/src/pages/members/sayuri.astro
+++ b/src/pages/members/sayuri.astro
@@ -34,6 +34,7 @@ var userData = {
   }, 
   bio: {
     w1: 'the',
+    end: 'She enjoys playing guitar and piano and producing music as well as dance. She also is a big fan of horror movies.', 
   }, 
   socials: [],
   portfolio: [],
