--- a/src/pages/members/isabelle.astro
+++ b/src/pages/members/isabelle.astro
@@ -26,6 +26,7 @@ var userData = {
     state: '',
   }, 
   bio: {
+    w1: 'the',
     w2: 'for',
     end: 'She likes to crochet in her free time and browse online shopping sites.', 
   }, 
