--- a/src/pages/members/isabelle.astro
+++ b/src/pages/members/isabelle.astro
@@ -28,7 +28,7 @@ var userData = {
   bio: {
     w1: 'the',
     w2: 'for',
-    end: 'She likes to crochet in her free time and browse online shopping sites.', 
+    end: 'In her free time, she likes to crochet and browse online shopping sites.', 
   }, 
   socials: [],
   portfolio: [
