--- a/src/pages/members/sayuri.astro
+++ b/src/pages/members/sayuri.astro
@@ -34,7 +34,7 @@ var userData = {
   }, 
   bio: {
     w1: 'the',
-    end: 'She enjoys playing the guitar and piano and producing music as well as dance. She also is a big fan of horror movies.', 
+    end: 'She enjoys playing the guitar and piano, producing music as well as dancing. She also is a big fan of horror movies.', 
   }, 
   socials: [],
   portfolio: [],
