--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -35,6 +35,7 @@ var userData = {
   bio: {
     w1: 'the',
     w2: 'for',
+    end: 'He enjoys playing the piano, coding and video games.', 
   }, 
   socials: [
     {
