--- a/src/styles/split.scss
+++ b/src/styles/split.scss
@@ -65,6 +65,7 @@ section.split:not(.tiny) {
         }
         
         & > section {
+            max-width: 100%;
             &:first-child {
                 margin-inline-end: var(--padding);
                 margin-block-end: 0;
