--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -219,7 +219,7 @@ section {
     align-items: center;
     flex-direction: column;
   }
-  &:not(.hero, .split .photos, #portal, .enroll__beta, .error &) {
+  &:not(.hero, .split, .photos, #portal, .enroll__beta, .error &) {
     box-shadow: var(--main-shadow);
     border-radius: 25px;
     transition: 500ms ease-in-out;
