add new icons to header.astro

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -9,14 +9,18 @@ import '../styles/header.scss'
   <nav class="nav">
     <input type="checkbox" id="closeNav" style="--display: none;" />
     <label for="closeNav" class="nav-hbg">
-      <img class="icon" alt="Open Sidebar Navigation" src="/assets/icons/hamburger-large.svg" />
+      <span class="material-symbols-outlined icon">
+        menu
+      </span>
     </label>
     <div class="nav-btns">
       <div class="nav-btns__inner">
         <div class="nav-info">
           <h3>Navigation</h3>
           <label for="closeNav" class="mob-nav-clse">
-            <img class="icon" alt="Close Sidebar Navigation" src="/assets/icons/X.svg" />
+            <span class="material-symbols-outlined icon">
+              close
+            </span>
           </label>
         </div>
         <a href="/" class="btn">Home</a>
