--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -465,7 +465,7 @@ form[action] * {
 
   #cSpan {
     position: absolute;
-    background-image: url('/assets/icons/X.png') no-repeat fixed center;
+    // background-image: url('/assets/icons/X.png') no-repeat fixed center;
     background-size: 100%;
     top: 12.5px;
     right: 12.5px;
