--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -17,7 +17,7 @@ import '../styles/photos.scss'
             <p>Redesign the <a href="https://amphibianfoundation.org/index.php/pages">Why We Do It Page</a> on <a href="https://amphibianfoundation.org">Their Website</a>.</p>
           </div>
           <div class="img-parent" style="--max-height: calc(100% + 24px); --translate-y: -2px;">
-            <img src="/assets/projects/amphibian-foundation.png" alt="The Amphibian Foundation Image" />
+            <img src="/assets/projects/amphibian-foundation.svg" alt="The Amphibian Foundation Logo" />
           </div>
         </TinySplit>
       </section>
