--- a/src/pages/members/beatriz.astro
+++ b/src/pages/members/beatriz.astro
@@ -22,6 +22,7 @@ var userData = {
     state: '',
   }, 
   bio: {
+    end: 'She is an avid reader of anything fantasy and hopes to one day create her own fantasy world. In addition, she loves to hone her art skills and hike in the wilderness.'
   }, 
   socials: [],
   portfolio: [],
