--- a/src/pages/members/amelia.astro
+++ b/src/pages/members/amelia.astro
@@ -26,7 +26,7 @@ var userData = {
   }, 
   bio: {
     w1: 'an', 
-    end: 'You’ll often see her spending her free time playing video games or struggling to art.', 
+    end: 'You’ll often see her spending her free time playing video games or struggling with art.', 
   }, 
   socials: [],
   portfolio: [],
