--- a/src/pages/members/hanlin.astro
+++ b/src/pages/members/hanlin.astro
@@ -34,7 +34,7 @@ var userData = {
     state: '',
   }, 
   bio: {
-    custom: `Hanlin{pronunciation} also known to his online community as <a href="https://roblox.fandom.com/wiki/Community:JavaCreates">JavaCreates</a> (previously I_lovejava) is an animator and digital art creator as well as ${defaultBio().replace(`Hanlin{pronunciation} is `, '')} You can find his work on his <a href="https://youtube.com/JavaCreates">YouTube Channel</a>!`, 
+    custom: `Hanlin{pronunciation} also known to his online community as <a href="https://roblox.fandom.com/wiki/Community:JavaCreates">JavaCreates</a>, is an animator and digital art creator and ${defaultBio().replace(`Hanlin{pronunciation} is `, '')} You can find his work on his <a href="https://youtube.com/JavaCreates">YouTube Channel</a>!`, 
   }, 
   socials: [
     {
