--- a/src/pages/members/bridget.astro
+++ b/src/pages/members/bridget.astro
@@ -26,7 +26,7 @@ var userData = {
   }, 
   bio: {
     w1: 'an', 
-    end: 'Most of the time, you’ll catch her doing schoolwork or at practice for cross country, but occasionally you’ll see her indulge herself in the world of digital art or baking an ungodly amount of sweets.'
+    end: 'Most of the time, you’ll catch her doing schoolwork or at practice for cross country, but occasionally, you’ll see her indulge herself in the world of digital art or baking an ungodly amount of sweets.'
   }, 
   socials: [],
   portfolio: [],
