--- a/src/pages/members/hanlin.astro
+++ b/src/pages/members/hanlin.astro
@@ -5,7 +5,7 @@ import updateUserData from './updateUserData.js'
 var userData = {
   username: 'hanlin', 
   name: 'Hanlin Su',
-role: 'Member'
+  role: 'Member', 
   pronunciation: false, //'Han-lin', 
   email: {
     g4g: true,
