--- a/src/pages/members/hanlin.astro
+++ b/src/pages/members/hanlin.astro
@@ -5,7 +5,9 @@ import updateUserData from './updateUserData.js'
 var userData = {
   username: 'hanlin', 
   name: 'Hanlin Su',
-  role: 'Member', 
+  role: {
+    name: 'Member', 
+  }, 
   pronunciation: false, //'Han-lin', 
   email: {
     g4g: true,
