--- a/src/pages/members/hanlin.astro
+++ b/src/pages/members/hanlin.astro
@@ -94,7 +94,7 @@ if (!!w2 === false) w2 = false
 let removeAnd = userData.bio.removeAnd
 if (!!removeAnd === false) removeAnd = false
 
-userData.bio.custom = `${userData.name}{pronunciation} also known to his online community as <a href="https://roblox.fandom.com/wiki/Community:JavaCreates">JavaCreates</a>, is an animator, digital art creator and ${defaultBio(userData.name, grade, w1, w2, userData.role.name, removeAnd).replace(`${userData.name}{pronunciation} is `, '')} You can find his work on his <a href="https://youtube.com/JavaCreates">YouTube Channel</a>!`, 
+userData.bio.custom = `${userData.name}{pronunciation} also known to his online community as <a href="https://roblox.fandom.com/wiki/Community:JavaCreates">JavaCreates</a>, is an animator, digital art creator, ${defaultBio(userData.name, grade, w1, w2, userData.role.name, removeAnd).replace(`${userData.name}{pronunciation} is `, '')} You can find his work on his <a href="https://youtube.com/JavaCreates">YouTube Channel</a>!`, 
 
 userData = updateUserData(userData)
 
