--- a/src/components/modal.astro
+++ b/src/components/modal.astro
@@ -2,7 +2,7 @@
 ---
 <dialog id="modal">
     <content>
-        <a href="javascript:hideModal()">
+        <a class="cSpan" href="javascript:hideModal()">
             <span class="material-symbols-outlined">
                 close
             </span>
