move modal css to new modal.scss and use it

--- a/src/components/modal.astro
+++ b/src/components/modal.astro
@@ -1,6 +1,7 @@
 ---
+import '../styles/modal.scss'
 ---
-<dialog id="modal">
+<dialog class="modal">
     <content>
         <a class="cSpan" href="javascript:hideModal()">
             <span class="material-symbols-outlined">
