--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -40,7 +40,7 @@ import '../styles/header.scss'
 </header>
 <script>
   var path = location.pathname
-  document.querySelectorAll('header nav nav-btns a:not(.nav-info a)').forEach(function(a, i) {
+  document.querySelectorAll('header nav .nav-btns a:not(.nav-info a)').forEach(function(a, i) {
     var link = a.href
     alert(link)
   })
