--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -42,6 +42,7 @@ import '../styles/header.scss'
   var path = location.pathname
   document.querySelectorAll('header nav .nav-btns a:not(.nav-info a)').forEach(function(a, i) {
     var link = a.href
+    if (link.includes('://')) link = link.split('://')[1]
     alert(link)
   })
 </script>
