--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -45,6 +45,6 @@ import '../styles/header.scss'
     if (link.includes('://')) link = link.split('://')[1]
     var domain = ''
     if (link.includes('/')) domain = link.split('/')[0]
-    alert(link)
+    alert(domain)
   })
 </script>
