--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -45,6 +45,10 @@ import '../styles/header.scss'
     if (link.includes('://')) link = link.split('://')[1]
     var domain = ''
     if (link.includes('/')) domain = link.split('/')[0]
-    alert(domain)
+    if (link.startsWith(domain)) {
+      link = link.split(domain)
+      alert(link)
+    }
   })
+  alert(location.pathname)
 </script>
