--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -40,6 +40,7 @@ import '../styles/header.scss'
 </header>
 <script>
   var path = location.pathname
+  alert(path)
   if (path.endsWith('/')) path = path.substring(0, path.split('').length-1)
   document.querySelectorAll('header nav .nav-btns a:not(.nav-info a)').forEach(function(a, i) {
     var link = a.href
@@ -48,7 +49,7 @@ import '../styles/header.scss'
     if (link.includes('/')) domain = link.split('/')[0]
     if (link.startsWith(domain)) {
       link = link.split(domain)[1]
-      alert(link)
+      // alert(link)
     }
   })
 </script>
