--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -39,7 +39,7 @@ var userData = {
   }, 
   socials: [
     {
-      url: 'https://RockGamerAK.com', 
+      url: 'https://adarshrkumar.com', 
       name: 'Website', 
     }, 
     {
