create and use esha.astro

--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -11,6 +11,7 @@ const members = [
   'Jeremy Hasan', 
   'Beatriz Meneses', 
   'Chloe Mercado', 
+  'Esha Mittal', 
   'Hanlin Su', 
   'Mia Tucker', 
   'Samantha Wolff', 
