--- a/src/components/carousel.astro
+++ b/src/components/carousel.astro
@@ -13,6 +13,6 @@ var forwFunction = `javascript:goBack(${carouselIndex});`
 var backFunction = `javascript:goForw(${carouselIndex});`
 
 ---
-<div data-carousel data-index={carouselIndex}>
+<div class="carousel" data-index={carouselIndex}>
   <slot />
 </div>
