--- a/src/components/carousels.astro
+++ b/src/components/carousels.astro
@@ -31,6 +31,7 @@
         imgs.classList.add('imgs')
 
         var images = carousel.querySelectorAll('img')
+        console.log(images)
         images.forEach(function(img, i) {
             var newImg = img.cloneNode(true)
             imgs.appendChild(newImg)
