--- a/src/components/carousels.astro
+++ b/src/components/carousels.astro
@@ -1,7 +1,9 @@
+---
+import '../styles/carousel.scss'
+---
 <slot />
 <script is:inline>
     let carousels = document.querySelectorAll('.carousel')
-    console.log(carousel)
     carousels.forEach(function(carousel, i) {
         i = String(!!carousel.getAttribute('data-index')
             .replace('true', carousel.getAttribute('data-index'))
@@ -32,20 +34,21 @@
         imgs.classList.add('imgs')
 
         var images = carousel.querySelectorAll('img')
-        console.log(images)
         images.forEach(function(img, i) {
             var newImg = img.cloneNode(true)
+            console.log(newImg)
             imgs.appendChild(newImg)
             img.remove()
         })
 
-        carousel.prepend(leftArrow)
+        carousel.appendChild(leftArrow)
+        carousel.appendChild(imgs)
         carousel.appendChild(rightArrow)
     })
 </script>
 <script is:inline>
     var currImgS = []
-    var dCarousels = document.querySelectorAll('[data-carousel]')
+    var dCarousels = document.querySelectorAll('.carousel')
     dCarousels.forEach(function(c, i) {
         if (!!c.querySelector('.active')) {
             currImgS.push(c.querySelector('.active').getAttribute('data-index'))
