--- a/src/styles/carousel.scss
+++ b/src/styles/carousel.scss
@@ -20,7 +20,7 @@
         }
     }
   
-    & > ul.imgs {
+    & > .imgs {
         flex: 1;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
@@ -30,17 +30,10 @@
         margin: 0;
         isolation: isolate;
   
-        & > li {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
       
         & .active {
             flex: 2;
             z-index: 2;
-            display: unset;
             grid-area: span 1 / span 2;
         }
   
@@ -49,8 +42,7 @@
             z-index: 1;
             border-top-right-radius: 0 !important;
             border-bottom-right-radius: 0 !important;
-            box-shadow-right: none;
-            display: unset
+            // box-shadow-right: none;
         }
   
         & .right {
@@ -58,15 +50,13 @@
             z-index: 1;
             border-top-left-radius: 0 !important;
             border-bottom-left-radius: 0 !important;
-            box-shadow-left: none;
-            display: unset;
+            // box-shadow-left: none;
+        }
+        &:not(.left, .active, .right) {
+            display: none;
         }
 
         & img {
-            &:not(.left, .active, .right) {
-                display: none;
-            }
-
             --bg-color: var(--orig-bg-color);
             flex: 1;
             max-width: 100%;
@@ -76,7 +66,6 @@
             transition: 500ms ease-in;
             border-radius: 25px;
             cursor: pointer;
-            display: none;
   
             &:hover {
                 transition: 500ms ease-out;
