--- a/src/components/carousels.astro
+++ b/src/components/carousels.astro
@@ -38,7 +38,7 @@ import '../styles/carousel.scss'
             var newImg = img.cloneNode(true)
             console.log(newImg)
             imgs.appendChild(newImg)
-            img.remove()
+            // img.remove()
         })
 
         carousel.appendChild(leftArrow)
